# quality

./: .gitignore  Makefile  NPM.md  README.md  activate_quality_guard.py  auto_setup_quality_guard.py  example.py  generate_missing_files.py  integrate_quality_guard.py  npm-quality-wrapper.sh  pyproject.toml  quality-guard.json  quality_guard_activator.py  quality_guard_exceptions.py  quality_guard_hook.py  requirements.txt  setup.py  setup_quality_guard.py  simple_test.py  test_quality_guard.py  violation_example.py
config/: sonar-project.properties
core/: __init__.py
demo_project/: main.py  quality_guard_activator.py  run_with_quality.py
demo_project/src/: good_example.py
demo_project/tests/: test_good_example.py
docs/: TROUBLESHOOTING.md
quality_guard/: __init__.py
scripts/: onboard-developer.sh
spyq/: Dockerfile  Makefile  README.md  __main__.py  check_quality.sh  docker-compose.yml  post_install.py  pyproject.toml  setup.py  sitecustomize.py  spyq.json  test_docker.sh  test_playbook.yml
spyq/.windsurf/: rules.json
spyq/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
spyq/examples/: README.md  bad_script.py  python_with_spyq.py  quality_example.py  run_validation_examples.py  test_script.py  test_workflow.py  validate_script.py
spyq/examples/test_scripts/: invalid_indentation.py  missing_whitespace.py  valid_script.py
spyq/quality/: .prettierrc  quality-config.json  quality-guard-template.json
spyq/scripts/: spyq-python
spyq/src/spyq/: __init__.py  cli.py  config.py  importhook.py  install.py  quality.py  setup_quality_guard.py  validator.py
spyq/src/spyq/commands/: __init__.py  init.py
spyq/tests/integration/playbooks/: test_spyq_validations.yml
tests/: test_quality_guard_exceptions.py
tools/: quality-watcher.js
